@@ -1,9 +1,6 @@
 #include <iostream>
-//#include "nodes.hpp"
 
 int main() {
     std::cout << "Hello, World!" << std::endl;
-//    Worker temp(1, 5, std::make_unique<PackageQueue>(PackageQueueType::FIFO));
-
     return 0;
 }
