@@ -4,7 +4,7 @@
 
 #include "../include/nodes.hpp"
 
-Storehouse::Storehouse(ElementID id, std::unique_ptr<IPackageStockpile> ips_ptr = std::make_unique<PackageQueue>(PackageQueueType::FIFO)) {
+Storehouse::Storehouse(ElementID id, std::unique_ptr<IPackageStockpile> ips_ptr) {
     id_ = id;
     iPackageStockpile_ptr_ = std::move(ips_ptr);
 }
@@ -15,77 +15,82 @@ void Storehouse::receive_package(Package &&p) {
 }
 
 
-void ReceiverPreferences::add_receiver(IPackageReceiver* r){
-    preferences_.emplace(r,1);
-    for(auto i = preferences_.begin(); i != preferences_.end(); i++){
-        i->second = 1/(double)(preferences_.size());
-    };
-};
+void ReceiverPreferences::add_receiver(IPackageReceiver *r) {
+    preferences_.emplace(r, 1);
+    for (auto i = preferences_.begin(); i != preferences_.end(); i++) {
+        i->second = 1 / (double) (preferences_.size());
+    }
+}
 
 
-IPackageReceiver *ReceiverPreferences::choose_receiver(){
+IPackageReceiver *ReceiverPreferences::choose_receiver() {
     double dys = probability_generator();
     double suma = 0;
-    for(auto i = preferences_.begin(); i != preferences_.end(); i++){
+    for (auto i = preferences_.begin(); i != preferences_.end(); i++) {
         suma += i->second;
-        if(suma > dys) {
+        if (suma > dys) {
             return i->first;
-        };
-    };
+        }
+    }
     return nullptr;
-};
+}
 
 
-void ReceiverPreferences::remove_receiver(IPackageReceiver* r){
+void ReceiverPreferences::remove_receiver(IPackageReceiver *r) {
     preferences_.erase(r);
-    if(preferences_.size() != 0){
-        for(auto i = preferences_.begin();i != preferences_.end();i++){
-            i->second = 1 / (double)(preferences_.size());
-        };
-    };
-};
+    if (preferences_.size() != 0) {
+        for (auto i = preferences_.begin(); i != preferences_.end(); i++) {
+            i->second = 1 / (double) (preferences_.size());
+        }
+    }
+}
 
 
 void PackageSender::send_package() {
-    if(buffer_){
+    if (buffer_) {
         receiver_preferences_.choose_receiver()->receive_package(std::move(buffer_.value()));
         buffer_.reset();
     }
 }
 
 
+Ramp::Ramp(ElementID id, TimeOffset di) {
+    id_ = id;
+    di_ = di;
+}
+
+void Ramp::deliver_goods(Time t) {
+    if (start_time_ == UINTMAX_MAX) start_time_ = t;
+
+    if ((t - start_time_) % di_ == 0) {
+        if (!buffer_) {
+            Package package = Package();
+            push_package(std::move(package));
+        }
+    }
+}
+
+
 Worker::Worker(ElementID id, TimeOffset pd, std::unique_ptr<IPackageQueue> q) {
-    //todo Zapytac czy PackageSender moze miec bezargumentowy konstruktor czy nie, jak dla mnie jest lekka sprzecznosc
     id_ = id;
     processing_duration_ = pd;
     queue_ptr_ = std::move(q);
 }
 
 
-void Worker::do_work(Time time) { // moze byc kraksa ale w mojej glowie to dziala XD jak cos to prosze pisac XDD
-    if (!currently_processed_package_.has_value()) {
+void Worker::do_work(Time time) {
+    if (!currently_processed_package_.has_value() && !queue_ptr_->empty()) {
         currently_processed_package_.emplace(std::move(queue_ptr_->pop()));
         package_processing_start_time_ = time;
     }
 
-    if (time >= package_processing_start_time_ + processing_duration_) {
-        // fixme Nie wiem czy lepiej bedzie wstawiac to do bufora czy ta metoda powinna to sama wyslac. Poki co wstawia do bufora
-//        receiver_preferences_.choose_receiver()->receive_package(std::move(currently_processed_package_.value()));
-//        currently_processed_package_.reset();
-    buffer_.emplace(std::move(currently_processed_package_.value()));
-    currently_processed_package_.reset();
+    if (currently_processed_package_.has_value() && time >= package_processing_start_time_ + processing_duration_ - 1) {
+        PackageSender::push_package(std::move(currently_processed_package_.value()));
+        currently_processed_package_.reset();
     }
 }
 
 
 void Worker::receive_package(Package &&p) {
-//    if (!currently_processed_package_.has_value()) {
-//        currently_processed_package_.emplace(std::move(p));
-//    }
-//    else {
-//        queue_ptr_->push(std::move(p));
-//    }
     queue_ptr_->push(std::move(p));
 }
-
-
